syntax = "proto3";

package zksync.config.object_store;

message ObjectStore {
  message Gcs {
    optional string bucket_base_url = 1; // required; url
  }

  message GcsWithCredentialFile {
    optional string bucket_base_url = 1; // required; url
    optional string gcs_credential_file_path = 4; // required; fs path
  }

  message GcsAnonymousReadOnly {
    optional string bucket_base_url = 1; // required; url
  }

  message FileBacked {
    optional string file_backed_base_path = 3; // required; fs path
  }

  oneof mode {
    Gcs gcs = 1;
    GcsWithCredentialFile gcs_with_credential_file = 2;
    GcsAnonymousReadOnly gcs_anonymous_read_only = 3;
    FileBacked file_backed = 4;
  }
  optional uint32 max_retries = 5; // required
}
